# ToDoManager

./: .gitignore  CMakeLists.txt
src/: dbmanager.cpp  dbmanager.h  main.cpp  projectlistmodel.cpp  projectlistmodel.h  qml.qrc  sectionlistmodel.cpp  sectionlistmodel.h  tasklistmodel.cpp  tasklistmodel.h
src/qml/: AddProject.qml  AddSection.qml  AddTaskSheet.qml  DatePicker.qml  MainWindow.qml  Sidebar.qml  TaskView.qml  main.qml
